--- a/public/index.html
+++ b/public/index.html
@@ -97,7 +97,7 @@
         </div>
     </div>
 
-    <script src="/socket.io/socket.io.js"></script>
+     <script src="https://impostor-futbol.onrender.com/"></script>
     <script src="script.js"></script>
 </body>
 </html>
