--- a/public/index.html
+++ b/public/index.html
@@ -99,5 +99,10 @@
 
      <script src="https://impostor-futbol.onrender.com/"></script>
     <script src="script.js"></script>
+    <script src="/socket.io/socket.io.js"></script>
+
+    <!-- Your script file -->
+    <script src="/script.js"></script>
+
 </body>
 </html>
