Add socket.io dependency and confirm all packages

--- a/public/index.html
+++ b/public/index.html
@@ -99,6 +99,9 @@
 
      <script src="https://impostor-futbol.onrender.com/"></script>
     <script src="script.js"></script>
+    <script src="/socket.io/socket.io.js"></script>
+<script src="script.js"></script>
+
 
 </body>
 </html>
