--- a/public/index.html
+++ b/public/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en-us">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Impostor Fútbol</title>
-    <link rel="stylesheet" href="style.css">
-</head>
+<title>Chat</title>
+<meta charset="utf-8" />
+<link rel="stylesheet" href="style.css" type="text/css" />
+<script type="text/javascript" src="../libs/jquery.js"></script>
+<script src="../libs/fontawesome.js" crossorigin="anonymous"></script>
+<script defer src="http://localhost:3000/socket.io/socket.io.js"></script>
+<script defer type="text/javascript" src="script.js"></script>
+<</head>
 <body>
     <div id="app">
         <h1>Impostor Fútbol</h1>
