Fix: Corrected Socket.IO client script loading in index.html

--- a/public/index.html
+++ b/public/index.html
@@ -97,11 +97,10 @@
         </div>
     </div>
 
-       <script src="/socket.io/socket.io.js"></script>
-<script src="script.js"></script>
-
-     <script src="https://impostor-futbol.onrender.com/"></script>
-    <script src="script.js"></script>
+ <script src="https://impostor-futbol.onrender.com/socket.io/socket.io.js"></script> 
+</head>
+<body>
+    <script src="script.js"></script> 
  
 
 </body>
